# nhsuk-frontend-jinja

./: .djlint_rules.yaml  .djlintrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  backstop.config.js  package-lock.json  package.json  pyproject.toml  sonar-project.properties  wait-on.config.js
.github/: dependabot.yml  pull-request.yml  release.yml
.github/workflows/: publish-test.yml  publish.yml  pull-request.yaml  tests.yml
app/: main.py
app/templates/: index.jinja
app/templates/_templates/: example.jinja  layout.jinja  layout.njk  page.jinja
app/templates/components/: all-buttons.jinja  all-links.jinja  all.jinja  typography.jinja
app/templates/components/action-link/: index.jinja
app/templates/components/back-link/: button.jinja  index.jinja  reverse.jinja
app/templates/components/breadcrumb/: index.jinja  reverse.jinja
app/templates/components/button/: disabled.jinja  index.jinja  link.jinja  login-disabled.jinja  login-link.jinja  login.jinja  (+13 more)
app/templates/pages/: about.jinja  examples.jinja  install.jinja
docs/contributing/: application-architecture.md  coding-standards.md  gitleaks.md  merging-upstream-changes.md  releasing.md  running-locally.md  testing.md
nhsuk_frontend_jinja/nhsuk/: template.jinja
nhsuk_frontend_jinja/templates/nhsuk/: template-with-imports.jinja  template.jinja
scripts/: refresh_components.py
tests/: conftest.py  fixture_loader.py  test_attributes_macro.py  test_autoescape.py  test_compatibility.py  test_regression.py  test_regressions.py
(+247 files in other folders)
